--- a/website.html
+++ b/website.html
@@ -607,6 +607,7 @@ Get Up To $100 Off Just <br> Buy <p style="color: #2b35fd;">Subscribe</p> Newsle
 <div class="footer1">
 
     <p class="footercontent">Copyright © 2048 LUGX Gaming Company. All rights reserved.    Design: TemplateMo</p>
+    <p>ufkjhkhjdshkjgsfhkh</p>
 
 </div>
 </body>
